# drf-auth-api

./: pyproject.toml  test.rest
api/: api.py  apps.py  urls.py  views.py
api/static/js/: users.js
api/templates/api/: signup.html
config/: settings.py
